# agentspine

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  opencode.json  pyproject.toml
docs/: README.md  architecture.md  release-policy.md  security-policy.md  standards.md
docs/adr/: ADR-001-stage1-extensibility-kernel.md
docs/architecture/: 00-overview.md  01-runtime-topology.md  02-plugin-system.md  03-llm-provider-gateway.md  04-execution-and-safety.md  05-memory-knowledge-and-audit.md  stage1-kernel-overview.md
docs/development/: build-order.md  codex-workflow.md  docs-gap-list.md  environment-setup.md  repository-structure.md  (+1 more)
prompts/: 10-planner.md  20-executor.md  30-reviewer.md  40-security-gate.md  50-approval-gate.md
reviews/: APPROVAL-template.md  COUNCIL-template.md  EXEC-template.md  GOVERNANCE-DECISION-template.md  RECLASSIFICATION-template.md  REVIEW-template.md  SECURITY-template.md
tasks/: README.md  TASK-101-research.md  TASK-101.md  TASK-102-research.md  TASK-102.md  TASK-103-research.md  TASK-103.md  TASK-104-research.md  TASK-104.md  TASK-DOC-001.md  TASK-DOC-002.md  TASK-P0-001.md  TASK-P0-002.md  TASK-P0-003.md  TASK-P0-004.md  TASK-P0-005.md  TASK-P0-006.md  TASK-P0-007.md  TASK-P0-008.md  TASK-P0-009.md  TASK-P0-010.md  TASK-P0-011.md  TASK-P0-012.md  TASK-P1-001.md  TASK-P2-001.md  TASK-P3-001.md  TASK-P4-001.md  TASK-P5-001.md  TASK-P6-001.md  TASK-SK-001.md  TASK-SK-002.md  TASK-SK-003.md  TASK-SK-004.md  TASK-SK-005.md  TASK-SK-006.md  TASK-SK-007.md  TASK-SK-008.md  TASK-template.md  _template.md  backlog.md  (+8 more)
tests/: test_health.py
(+49 files in other folders)
