[project]
name = "agent-framework"
version = "0.1.0"
description = "Extensible local-first AI agent framework"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.135,<0.136",
  "uvicorn[standard]>=0.41,<0.42",
  "pydantic>=2.12,<2.13",
  "pydantic-settings",
  "langgraph>=1.1,<1.2",
  "sqlalchemy>=2.0.48,<2.1",
  "alembic>=1.18,<1.19",
  "psycopg[binary]>=3.3,<3.4",
  "pgvector>=0.4,<0.5",
  "openai>=2.28,<2.29",
  "ollama>=0.6,<0.7",
  "httpx>=0.28,<0.29",
  "python-telegram-bot>=22.6,<22.7",
  "langfuse>=3.14,<3.15",
]

[dependency-groups]
dev = [
  "pytest>=8.4,<8.5",
  "pytest-asyncio>=1.2,<1.3",
  "pytest-cov>=7.0,<7.1",
  "ruff>=0.14,<0.15",
  "mypy>=1.18,<1.19",
  "types-PyYAML",
]

[build-system]
requires = ["hatchling>=1.27,<1.28"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
